# tvrecorder

./: .gitignore  README.md  pyproject.toml
tests/: test_tvrecorder.py
tvrecorder/: __init__.py  channelmapper.py  config.py  credential.py  db.py  layouts.py  models.py  sdapi.py  strings.py  tvmon.py  tvr.py  tvrgui.py  updatedb.py  windows.py  wrangler.py
