[tool.poetry]
name = "tvrecorder"
version = "0.1.10"
description = ""
authors = ["ccdale <chris.allison@hivehome.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ccaerrors = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
