[tool.poetry]
name = "tvrecorder"
version = "0.1.11"
description = ""
authors = ["ccdale <chris.charles.allison+tvrecorder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ccaerrors = "^0.1.2"
ccaconfig = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
