[tool.poetry]
name = "tvrecorder"
version = "0.1.64"
description = ""
authors = ["ccdale <chris.charles.allison+tvrecorder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ccaerrors = "^0.1.2"
SQLAlchemy = "^1.4.39"
PyMySQL = "^1.0.2"
keyring = "^23.6.0"
PySimpleGUI = "^4.60.1"
requests = "^2.28.0"
ccaconfig = "^0.3.10"

[tool.poetry.dev-dependencies]
pytest = "^7"

[tool.poetry.scripts]
updatetv = "tvrecorder.updatedb:updatedb"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
